<resources>
    <string name="app_name">Meds Tracker</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="home_page_header">Home Page</string>


    <string name="drug_disposal_header">Disposal of drugs</string>
    <string name="drug_disposal_text">When medicines are no longer needed, it is important to dispose of them properly to help reduce harm from accidental exposure or intentional misuse....</string>
    <string name="drug_disposal_read_more">www.fda.gov</string>
    <string name="drug_disposal_url">https://www.fda.gov/Drugs/ResourcesForYou/Consumers/BuyingUsingMedicineSafely/EnsuringSafeUseofMedicine/SafeDisposalofMedicines/ucm186187.htm</string>

    <string name="drug_side_effects_header">Side effects</string>
    <string name="drug_side_effects_text">Drug side effects are unwanted or unexpected drug reactions.  Ask your health care professional about any possible side effects and what, if any steps should be taken to reduce the risk....</string>
    <string name="drug_side_effects_read_more">www.fda.gov</string>
    <string name="drug_side_effects_url">https://www.fda.gov/drugs/resourcesforyou/consumers/ucm196029.htm</string>

    <string name="drug_tips_header">Medication errors</string>
    <string name="drug_tips_text">Every time you receive a refill, look at the medication before you leave the pharmacy to make sure it looks the same as what you had before....</string>
    <string name="drug_tips_read_more">www.fda.gov</string>
    <string name="drug_tips_url">https://www.fda.gov/ForConsumers/ConsumerUpdates/ucm096403.htm</string>


    <string name="drug_faqs_header">Medication FAQs</string>
    <string name="drug_faqs_text">Why is it so important to take my medications?\n\nTaking medication exactly as your doctor recommends is not always as simple as it may seem....</string>
    <string name="drug_faqs_read_more">www1.shoppersdrugmart.ca</string>
    <string name="drug_faqs_url">https://www1.shoppersdrugmart.ca/en/health-and-pharmacy/medication-faqs</string>

    <string name="drug_interactions_header">Drug interactions</string>
    <string name="drug_interactions_text">If you are taking any sort of medication, it\'s recommended that you avoid alcohol, which can increase or decrease the effect of many drugs....</string>
    <string name="drug_interactions_read_more">www.fda.gov</string>
    <string name="drug_interactions_url">https://www.fda.gov/ForConsumers/ConsumerUpdates/ucm096386.htm</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

   <string name="ABOUT">ABOUT</string>
    <string name="about_text">Use MedsTracker to:\n

• Take photos of your daily medication\n
• Go to “Your Drugs” to create a new reminder include a title, description, and daily dose of your medication\n
• Go to “Add Photo” to add a photo of your medication so that you\’ll know you’re taking the correct medication.\n
• Guide tab is a helpful guide for taking medications. \n
• Phone tab is a helpful tool to add contacts in case of an emergency. An example would be your family doctor or a relative.\n</string>
    <!--<string name="about_text2">-->
        <!--• Application Developed By Sobhi and Mike\n-->
        <!--• Logo Created By Sobhi Houri\n-->
        <!--• Other images are Public Domain\n-->
    <!--</string>-->

    <string name="delete_phone_confirm">Delete this phone card?</string>
    <string name="delete_drug_confirm">Delete this drug card?</string>

    <string name="yes">YES</string>
    <string name="no">NO</string>

    <string name="hide_photo">Hide photo</string>
    <string name="show_photo">Show photo</string>

    <string name="permission_granted">PERMISSION_GRANTED</string>
    <string name="permission_denied">PERMISSION_DENIED</string>

    <string name="no_installed_software">No installed software to complete the task</string>

    <string name="search_intent_query">drug information -pdf</string>

    <string name="delete_photo">Delete photo?</string>
    <string name="photo_deleted">Photo deleted</string>
    <string name="no_photo_to_delete">There is no photo to delete</string>

    <string name="photo_added">Photo added</string>
    <string name="photo_not_added">Photo not added</string>

    <string name="please_take_picture">Please take a picture, then press SAVE</string>

    <string name="picture_taken">Picture taken</string>

    <string name="settings_button_header">Card Color</string>
    <string name="settings_button_details">For Drugs and Phone list</string>
    <string name="settings_button_image_sources">Image sources</string>
    <string name="settings_button_image_sources_details">All images in this App are Public Domain, except for the App logo.</string>


    <string name="drug_name_label">Drug:</string>
    <string name="drug_name_hint">eg. Aspirin</string>

    <string name="drug_doze_label">Dose:</string>
    <string name="drug_doze_hint">eg. 325 mg</string>

    <string name="drug_when_label">When:</string>
    <string name="drug_when_hint">eg. every 6 hours</string>

    <string name="drug_note_label">Notes:</string>
    <string name="drug_note_hint">eg. Take with food</string>

    <string name="create_card_button">CREATE CARD</string>


    <string name="phone_name_label">Name:</string>
    <string name="phone_name_hint">eg. Dr. Andrew Smith</string>

    <string name="phone_number_label">Phone:</string>
    <string name="phone_number_hint">519 448 1111</string>

    <string name="phone_note_label">Note:</string>
    <string name="phone_note_hint">eg. Family doctor"</string>

    <string name="edit_drug_delete_photo">Delete photo</string>

    <string name="save_button">SAVE</string>

    <string name="home_page_your_drugs_button">YOUR DRUGS</string>
    <string name="home_page_phone_button">PHONE</string>

    <string name="delete_button">DELETE</string>

    <string name="sources_beer_url">https://pixabay.com/en/doctor-orange-medical-symbol-296571/</string>
    <string name="sources_error_url">https://pixabay.com/en/doctor-orange-medical-symbol-296571/</string>
    <string name="sources_faqs_url">https://pixabay.com/en/tablets-pills-vitamins-antibiotic-1796506/</string>

    <string name="created_by_sobhi">Created by Sobhi Houri</string>

    <string name="sources_medical_symbol_url">https://pixabay.com/en/doctor-orange-medical-symbol-296571/</string>
    <string name="sources_tablets_url">https://pixabay.com/en/tablets-pills-vitamins-antibiotic-1796506/</string>

</resources>
