<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        tools:context="com.example.cdu.medstracker.CreateDrugFragment"
        android:columnCount="2"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:useDefaultMargins="true">

        <!-- TODO: Update blank fragment layout -->

        <TextView
            android:text="@string/drug_name_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/form_field_label" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textCapCharacters"
            android:ems="@integer/edit_text_ems_text_size"
            android:hint="@string/drug_name_hint"
            android:textColor="@color/black"
            android:id="@+id/drugNameEditText"
            android:layout_column="1">

            <!--Requests focus for this EditText, when the parent view is first displayed-->
            <requestFocus />

        </EditText>

        <TextView
            android:text="@string/drug_doze_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimaryDark"
            android:layout_column="0"
            android:textSize="@dimen/form_field_label" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:hint="@string/drug_doze_hint"
            android:ems="@integer/edit_text_ems_text_size"
            android:textColor="@color/black"
            android:id="@+id/drugDoseEditText"
            android:layout_column="1" />

        <TextView
            android:text="@string/drug_when_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimaryDark"
            android:layout_column="0"
            android:textSize="@dimen/form_field_label" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:ems="@integer/edit_text_ems_text_size"
            android:textColor="@color/black"
            android:hint="@string/drug_when_hint"
            android:id="@+id/whenToTakeEditText"
            android:layout_column="1" />

        <TextView
            android:text="@string/drug_note_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimaryDark"
            android:layout_column="0"
            android:textSize="@dimen/form_field_label" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:ems="@integer/edit_text_ems_text_size"
            android:textColor="@color/black"
            android:hint="@string/drug_note_hint"
            android:id="@+id/notesEditText"
            android:layout_column="1" />



        <Button
            android:text="@string/create_card_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/submitButton"
            android:layout_columnSpan="2"
            android:layout_column="0" />
    </GridLayout>
</ScrollView>
